<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".Model.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/noTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_home_noTask"
        android:paddingTop="25dp"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="visible" />

</RelativeLayout>