...
            android:id="@+id/view"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/cancel_delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/light_gray"
            android:text="@string/delete_dialog_cancel"
            android:textColor="@color/black"
            app:rippleColor="@color/gray" />

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/delete_dialog_delete"
...
